# ghstatsussy

./: .gitignore  Dockerfile  HOSTED_SPEC.md  README.md  SPEC.md  docker-compose.preview.yml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: export-and-profile-publishing-handoff.md  export-and-profile-publishing-implementation.md  export-and-profile-publishing-spec.md  report-theme-redesign-handoff.md
examples/: certbot-ghstats-command.txt  ghstats.ussyco.de.nginx.conf  ghstatsussy-web.service  ghstatsussy-worker.service  ghstatsussy.env.example  live_report.html  live_report.json  productivity.ussyco.de.nginx.conf  sample_report.html  sample_report.json  wildcard-ghstats.ussyco.de.nginx.conf
ghstats/: __init__.py  __main__.py  cli.py  config.py  sample_data.py  service.py
ghstats/analytics/: aggregations.py  metrics.py
ghstats/export/: __init__.py  browser.py  markdown.py  service.py
ghstats/github/: __init__.py  client.py  queries.py
ghstats/models/: activity.py
ghstats/render/: html.py  templates.py  themes.py
ghstats/templates/: report.html.j2  report_archive.html.j2  report_base.html.j2  report_brutalism.html.j2  report_cyberpunk.html.j2  report_default.html.j2  report_fieldnotes.html.j2  report_gallery.html.j2  report_glassmorphism.html.j2  report_holo.html.j2  report_ledger.html.j2  report_liquid.html.j2  report_matrix.html.j2  report_monochrome.html.j2  report_orbital.html.j2  report_paper.html.j2  report_retro_os.html.j2  report_scrapbook.html.j2  report_signalroom.html.j2  report_synthwave.html.j2  report_tapearchive.html.j2  (+1 more)
(+20 files in other folders)
