[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghstats"
version = "0.1.0"
description = "GitHub activity infographic CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "httpx>=0.27,<1.0",
  "Jinja2>=3.1,<4.0",
]

[project.scripts]
ghstats = "ghstats.cli:run"

[tool.setuptools.packages.find]
include = ["ghstats*"]
