[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghstats"
version = "0.1.0"
description = "GitHub activity infographic CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "httpx>=0.27,<1.0",
  "Jinja2>=3.1,<4.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "cryptography>=44.0,<45.0",
  "itsdangerous>=2.2,<3.0",
  "playwright>=1.52,<2.0",
  "PyJWT>=2.9,<3.0",
]

[project.scripts]
ghstats = "ghstats.cli:run"
ghstats-web = "ghstats.web.app:run"

[tool.setuptools.packages.find]
include = ["ghstats*"]
